--- a/Detector.tex
+++ b/Detector.tex
@@ -1,5 +1,5 @@
-In order to probe the standard model or search for hints of new physics beyond the SM, experiments in particle physics often make use of powerful particle accelerators. In these machines, particles are collided to examine the constituents of matter and interactions between them. The analyses presented in this thesis are performed with data obtained from the CMS experiment located at the Large Hadron Collider at CERN near Geneva, which is the most powerful accelerator to date. \\ 
-The first section of this chapter provides an introduction to the LHC, which is followed by an overview of the detector system of the CMS experiment. Afterwards, the different periods of collision data taking at the LHC are discussed. This chapter concludes with an introduction to the generation of simulated events which are needed for the analysis of real data events.  
+In order to probe the standard model or search for hints of new physics beyond the SM, experiments in particle physics often make use of powerful particle accelerators. In these machines, particles are collided to examine the constituents of matter and interactions between them. The analyses presented in this thesis are performed with data obtained from the CMS experiment located at the Large Hadron Collider at CERN near Geneva which is the most powerful accelerator to date. \\ 
+The first section of this chapter provides an introduction to the LHC which is followed by an overview of the detector system of the CMS experiment. Afterwards, the different periods of collision data taking at the LHC are discussed.  
 \section{The Large Hadron Collider}
 \label{sec:lhc}
 The LHC~\cite{Bruning:782076, 1748-0221-3-08-S08001} is a ring accelerator designed to provide particle collisions of hadrons. It is built in the tunnel of the former LEP~\cite{LEPdesign} collider 45--170\,m below the surface and has a circumference of 26.7\,km. The LHC is a particle-particle collider and composed of two rings with counter-rotating beams. It can be operated in different modes with either proton or heavy ion (\eg lead) beams.\footnote{All studies presented in this thesis are based on proton-proton collisions. Thus, the operation with heavy ions is not discussed.} \\
@@ -16,7 +16,7 @@ Before the protons are injected into the LHC, they are pre-accelerated in variou
 \\
 The main goal of the LHC is to provide proton-proton collisions to the experiments with centre-of-mass energies up to 14\tev in order to explore physics processes at novel energy regimes. For a certain process, the expected number of events $N$ is given by the product of the cross section $\sigma$ and the integral $L = \int \mathcal{L}  \, dt$ of the instantaneous luminosity $\cal L$ over time, such that
 \begin{equation}
-  N = \sigma \cdot L . 
+  N = \sigma \cdot L \; . 
   \label{eq:lumi}
 \end{equation}
 The luminosity is a machine parameter and can be expressed for beams with Gaussian-shaped profiles as  
@@ -34,11 +34,11 @@ with the collision frequency $f$, the number of particles $n_1$ and $n_2$ contai
   \label{fig:CrossSections}
 \end{figure}
 \\
-The four main experiments are located at four of eight locations along the LHC ring where the beams cross and can be brought to collision. The two high luminosity experiments ATLAS~\cite{det::ATLAS} and CMS~\cite{Chatrchyan:2008zzk, bib:cmsptdr1} are designed for multiple purposes like precision measurements of SM quantities, search for the standard model Higgs Boson and searches for signals indicating new physics. The LHCb detector~\cite{det::LHCb}, however, is a specialised experiment and focuses on the measurement of CP violation in the interactions of hadrons containing b quarks. The only experiment especially designed for the analysis of heavy ion collisions is the ALICE~\cite{det::ALICE} detector with the main emphasis on the physics of strongly interacting matter at extreme energy densities, like quark-gluon plasma.
+The four main experiments are located at four of eight locations along the LHC ring where the beams cross and can be brought to collision. The two high luminosity experiments ATLAS~\cite{det::ATLAS} and CMS~\cite{Chatrchyan:2008zzk, bib:cmsptdr1} are designed for multiple purposes, like precision measurements of SM quantities, search for the standard model Higgs Boson and searches for signals indicating new physics. The LHCb detector~\cite{det::LHCb}, however, is a specialised experiment and focuses on the measurement of CP violation in the interactions of hadrons containing $b$ quarks. The only experiment especially designed for the analysis of heavy ion collisions is the ALICE~\cite{det::ALICE} detector with the main emphasis on the physics of strongly interacting matter at extreme energy densities, like quark-gluon plasma.
 
 \section{The CMS Experiment}
 \label{sec:cms}
-The CMS detector is one of the two general-purpose experiments at the LHC. In addition to tests of the SM at the TeV scale, studies of the nature of elektroweak symmetry breaking and searches for so far unknown effects are the primary targets of these experiments. These ambitious goals can only be achieved by fully exploiting the provided collision energy and luminosity with a suitable detector concept.\\
+The CMS detector is one of the two general-purpose experiments at the LHC. In addition to tests of the SM at the TeV scale, studies of the nature of elektroweak symmetry breaking and searches for so far unknown effects are the primary targets of this experiment. These ambitious goals can only be achieved by fully exploiting the provided collision energy and luminosity with a suitable detector concept.\\
 The CMS detector with its typical cylindrical design of different sub-detector components around the beam line is designed to meet these requirements. A sketch of the CMS detector and the different sub-detectors is shown in Fig.~\ref{fig:CMS}.
 \begin{figure}[!t]
   \centering
@@ -49,12 +49,12 @@ The CMS detector with its typical cylindrical design of different sub-detector c
   \caption{A perspective view of the CMS detector~\cite{Chatrchyan:2008zzk}.}
   \label{fig:CMS}
 \end{figure}
-Such as other high-energy particle experiments, the CMS detector makes use of tracking detectors and calorimeters to measure momenta of particles, energy depositions and flight directions in order to identify the objects emerging from the particle collisions. \\
+Like other high-energy particle experiments, the CMS detector makes use of tracking detectors and calorimeters to measure momenta of particles, energy depositions and flight directions in order to identify the objects emerging from the particle collisions. \\
 The following sections comprise a description of the CMS detector which exhibits a total weight of 12\,500\,t and has a length of 21.6\,m and a diameter of 14.6\,m. A detailed discussion of the detector design can be found in~\cite{Chatrchyan:2008zzk, bib:cmsptdr1}. %After the introduction of the CMS coordinate conventions in Sec.~\ref{subsec:cms_coordinates}, the superconducting magnet is discussed (Sec.~\ref{subsec:cms_magnet}). Afterwards, the tracking system (Sec.~\ref{subsec:cms_tracker}), the calorimeters (Sec.~\ref{subsec:calorimeters}) and the muon system (Sec.~\ref{subsec:cms_muon}) are described moving from the inside of the detector outwards. The detector description ends with a short review of the trigger system in Sec.~\ref{subsec:cms_trigger}.  
 
 \subsection{Coordinate Conventions and Kinematic Variables}
 \label{subsec:cms_coordinates}
-In order to describe the particle collisions, the CMS experiment makes use of a right-handed coordinate system with its origin at the centre of the detector at the nominal interaction point. While the $z$-axis is defined along the direction of the anti-clockwise beam, the $x$-axis points to the center of the LHC ring and the $y$-axis vertically upwards. In this $xy$-plane the azimuthal angle $\phi$ is measured where $\phi = 0$ coincides with the x-axis. The polar angle $\theta$ is defined with respect to the positive $z$-axis. A quantity closely related to the polar angle is the pseudorapidity $\eta$ defined as
+In order to describe the particle collisions, the CMS experiment makes use of a right-handed coordinate system with its origin at the centre of the detector at the nominal interaction point. While the $z$-axis is defined along the direction of the anti-clockwise beam, the $x$-axis points to the center of the LHC ring and the $y$-axis vertically upwards. In this $xy$-plane the azimuthal angle $\phi$ is measured where $\phi = 0$ coincides with the $x$-axis. The polar angle $\theta$ is defined with respect to the positive $z$-axis. A quantity closely related to the polar angle is the pseudorapidity $\eta$ defined as
 \begin{equation}
 \eta = \mathrm{-ln} \left[\mathrm{tan} \left(\frac{\theta}{2} \right)\right]
 \end{equation}
@@ -62,11 +62,12 @@ which is widely used in experimental particle physics. A pseudorapidity $\eta = 
 \begin{equation}
 \Delta R = \sqrt{(\Delta \eta)^2 + (\Delta \phi)^2} \, .
 \end{equation}
-At the LHC, the hard interaction, \ie the actual momentum transfer, is not taking place between the protons as a whole, but rather between the partons. Since the partons carry an unknown fraction of the proton momenta, the initial conditions of the primary collisions are unknown as well. Thus, conservation of the total momentum can not be utilized directly to describe the momentum balance in the final state. However, it is known that the initial particles have no significant momentum orthogonal to the beam axis which is referred to as \textit{transverse momentum}. Consequently, the transverse momentum of a particle is defined as 
+At the LHC, the hard interaction, \ie the actual momentum transfer, is not taking place between the protons as a whole, but rather between the partons. Since the partons carry an unknown fraction of the proton momenta, the initial conditions of the primary collisions are also unknown. Thus, conservation of the total momentum can not be utilized directly to describe the momentum balance in the final state. However, it is known that the initial particles have no significant momentum orthogonal to the beam axis which is referred to as \textit{transverse momentum}. The transverse momentum of a particle is defined as 
 \begin{equation}
 \pt = \sqrt{p_x^2 + p_y^2} 
 \end{equation}
-with the components $p_x$ and $p_y$ of the momentum vector in the $x$ and $y$ direction. Momentum conservation in the transverse plane is then used to constrain the final state. Hence, the momentum imbalance in the transverse plane (\metvec) is determined as the negative vector sum of the momenta of all $N$ particles in the event
+with the components $p_x$ and $p_y$ of the momentum vector in the $x$ and $y$ direction. Momentum conservation in the transverse plane is then used to constrain the final state. \\
+The momentum imbalance in the transverse plane (\metvec) is determined as the negative vector sum of the momenta of all $N$ particles in the event
 \begin{equation}
 \metvec = - \sum_{i=1}^{N} \vec{p}_\mathrm{T,i} \; .
 \end{equation}
@@ -91,8 +92,8 @@ In order to fulfill these tasks, the CMS experiment makes use of a tracker desig
   \label{fig:CMS_tracker}
 \end{figure} 
 \begin{description}
- \item \textbf{Pixel Detector:} The pixel detector consists of three barrel layers extending radially from 4.4\,cm to 10.2\,cm and two endcap disks on each side. In total, there are 1440 pixel modules installed. The size of one pixel cell is 100 x 150 \textmu m$^2$ providing similar track resolution quality in $r$--$\phi$ and $z$ direction. This configuration provides for almost the whole range up to $|\eta| = 2.5$ three precise hits which is especially important for the reconstruction of secondary vertices.
- \item \textbf{Silicon Strip Tracker:} The silicon strip detector which extends to a radius of 1.1\,m surrounds the pixel tracker. The more than 15\,000 individual strip detector modules are arranged in an inner and an outer detector part. The inner part of the strip tracker is build by the four \textit{Tracker Inner Barrel} (TIB) layers which are accompanied by the three \textit{Tracker Inner Disks} (TID) at the end sides. This inner part provides up to four track measurements in the $r$--$\phi$ plane. The TIB/TID system lies within the \textit{Tracker Outer Barrel} (TOB) consisting of another six barrel layers while it is complemented by the \textit{Tracker End Caps} (TEC) which add another nine disks at each side of the tracking system. This layout provides at least around nine hits within the silicon strip system. 
+ \item \textbf{Pixel Detector:} The pixel detector consists of three barrel layers, extending radially from 4.4\,cm to 10.2\,cm, and two endcap disks on each side. In total, there are 1440 pixel modules installed. The size of one pixel cell is 100 x 150 \textmu m$^2$ providing similar track resolution quality in $r$--$\phi$ and $z$ direction. This configuration provides for almost the whole range up to $|\eta| = 2.5$ three precise hits which is especially important for the reconstruction of secondary vertices.
+ \item \textbf{Silicon Strip Tracker:} The silicon strip detector, which extends to a radius of 1.1\,m, surrounds the pixel tracker. The more than 15\,000 individual strip detector modules are arranged in an inner and an outer detector part. The inner part of the strip tracker is build by the four \textit{Tracker Inner Barrel} (TIB) layers which are accompanied by the three \textit{Tracker Inner Disks} (TID) at the end sides. This inner part provides up to four track measurements in the $r$--$\phi$ plane. The TIB/TID system lies within the \textit{Tracker Outer Barrel} (TOB) consisting of another six barrel layers while it is complemented by the \textit{Tracker End Caps} (TEC) which add another nine disks at each side of the tracking system. This layout provides at least around nine hits within the silicon strip system. 
 \end{description}
 The tracking system with the design described above provides a precise impact parameter resolution and high tracking efficiency~\cite{bib:cmstdr:tracker}. The impact parameter resolution is of the order of $\lesssim$ 35\,\textmu m in the plane perpendicular to the beam (for particles with \pt$> 10$\gev) and reaches 75\,\textmu m in the longitudinal direction. Furthermore, the track reconstruction efficiency of high energetic electrons is above 90\%, that of charged hadrons up to 95\% (for \pt$> 10$\gev) and that for muons even better than 98\% in the whole covered region up to $|\eta| = 2.5$. This is achieved already for muons with very low transverse momenta around 1\,GeV. Altogether, the relative transverse momentum resolution reaches a level of 1--2\% for high momentum tracks ($\approx$ 100\gev) in the barrel for $|\eta| < 1.6$.
  
@@ -131,7 +132,7 @@ The performance of the ECAL has already been evaluated based on test-beam result
 \begin{equation}
 \frac{\sigma(E)}{E}= \frac{0.124}{E/\mathrm{GeV}} \oplus \frac{0.036}{\sqrt{E/\mathrm{GeV}}} \oplus 0.0026 \; .
 \end{equation}
-Thus, the typical relative energy resolution for electrons with a transverse momentum of 120\gev with this calorimeter configuration is of the order of 0.5\%. \\
+Thus, the typical relative energy resolution for electrons with a transverse momentum of 120\gev with this calorimeter configuration is in the order of 0.5\%. \\
 In addition to the calibration of the absolute energy scale, especially channel-to-channel effects referred to as \textit{intercalibration} have to be accounted for. This intercalibration is performed based on $\pi^0 \rightarrow \gamma \gamma, W \rightarrow e\nu$ and $Z \rightarrow ee$ events and results in a crystal-intercalibration accuracy of 0.6\% ~\cite{Chatrchyan:2013dga}. Changes in the transparency of the ECAL crystals during operation caused by irradiation are monitored by a dedicated laser system based on the injection of reference laser pulses into the crystals. 
 
 \subsubsection*{Hadron Calorimeter}
@@ -179,13 +180,13 @@ Three different types of gaseous detectors are used to achieve a good muon momen
  \item \textbf{Cathode strip chambers (CSC):} The endcap regions are equipped with cathode strip chambers and cover the pseudorapidity range $0.9 < |\eta| < 2.4$. These provide a fast response time and fine segmentation while they are resistant against radiation. Thus, they are well suited for the forward region where the muon and background rates are largely increased and the magnetic field is high and non-uniform. The CSCs, which are multiwire proportional chambers in which anode wires are interlaced with cathode panels, perform a precise position measurement in the $r\phi$--plane with a spatial resolution of 75--150\,\textmu m. 
  \item \textbf{Resistive plate chambers (RPC):} Resistive plate chambers are used to complement the drift tube and cathode strip chambers in the range $|\eta| < 1.6$. These are gaseous parallel-plate detectors with a spatial resolution coarser than the DTs and CSCs. However, they provide a very fast response and good time resolution at high particle rates. Thus, they are able to very efficiently detect the bunch-crossing a muon track is associated to. 
 \end{description}
-The global muon reconstruction efficiency is in general about 95--99\% and only drops for some $|\eta|$ regions, \eg in the transition region between the barrel and endcap part around $|\eta|=1.2$. Since muons reaching the muon system are affected by multiple scattering and radiation losses in the material, the resolution for muons with transverse momenta below $\approx$ 200\gev is in general better based on the inner tracking system than for the muon system. However, at higher transverse momenta the track-curvature measurement in the inner tracking system is limited and thus a combination with the measurement in the muon system beneficial due to the longer lever arm. In general, the muon momentum resolution can be improved by combining the information from the inner tracker and the muon system due to an improved fault finding. This combined approach results in a relative muon momentum resolution for muons with high momenta around 1\tev of about 5\%.
+The global muon reconstruction efficiency is in general about 95--99\% and only drops for some $|\eta|$ regions, \eg in the transition region between the barrel and endcap part around $|\eta|=1.2$. Since muons reaching the muon system are affected by multiple scattering and radiation losses in the material, the resolution for muons with transverse momenta below $\approx$ 200\gev is in general better based on the inner tracking system than for the muon system. However, at higher transverse momenta the track-curvature measurement in the inner tracking system is limited and thus a combination with the measurement in the muon system is beneficial because of the longer lever arm. In general, the muon momentum resolution can be improved by combining the information from the inner tracker and the muon system due to an improved fault finding. This combined approach results in a relative muon momentum resolution for muons with high momenta around 1\tev of about 5\%.
 
 \subsection{Trigger System}
 \label{subsec:cms_trigger}
 The LHC operating at design conditions provides particle collisions with a bunch crossing rate of 40\,MHz. This results in an enormous amount of event data which have to be processed and stored for later analyses. With an approximate event size of 1\,MB, it is technically impossible to record all events. However, as illustrated in Fig.~\ref{fig:CrossSections}, the event rate of interesting events is orders of magnitudes smaller than the total inelastic proton-proton cross section. Thus, already in the trigger system a fast event preselection is performed that allows to reduce the amount of data to a storable size while still retaining the information of interest. Hence, the trigger system makes up the first step in the physics analysis process. In order to achieve the necessary rate reduction, the CMS experiment uses a two-stage trigger system:
 \begin{description}
-\item \textbf{Level-1 (L1) trigger:} The L1 trigger consists of custom-made fast programmable hardware. It makes use of data received from fast detector components which are the calorimeters and the muon system at reduced granularity. For that purpose, the calorimeter is divided into so-called \textit{trigger towers} which cover an area in $(\eta, \phi)$ of $(0.087, 0.087)$ up to $|\eta| = 1.74$ getting even coarser for higher $|\eta|$. At L1, the trigger decision is based on energy deposits in those trigger towers or certain hit patterns in the muon chambers forming trigger primitive objects which are electrons/photons, muons or jets and global quantities like sums of \et or \met. Events are accepted if those trigger objects pass some predefined criteria like for instance certain \pt thresholds. The L1 trigger latency, \ie the time between the actual bunch crossing and the delivery of a positive L1 trigger decision to the front-end electronics, is 3.2\,\textmu s. During this period, the high resolution data is pipelined in readout buffers for further processing. The L1 trigger reduces the event rate to a maximum of 100\,kHz.
+\item \textbf{Level-1 (L1) trigger:} The L1 trigger consists of custom-made fast programmable hardware. It makes use of data received from fast detector components which are the calorimeters and the muon system at reduced granularity. For that purpose, the calorimeter is divided into so-called \textit{trigger towers} which cover an area in $(\eta, \phi)$ of $(0.087, 0.087)$ up to $|\eta| = 1.74$ getting even coarser for higher $|\eta|$. At L1, the trigger decision is based on energy deposits in those trigger towers or certain hit patterns in the muon chambers forming trigger primitive objects which are electrons/photons, muons or jets and global quantities like sums of \et or \met. Events are accepted if those trigger objects pass some predefined criteria, like for instance certain \pt thresholds. The L1 trigger latency, \ie the time between the actual bunch crossing and the delivery of a positive L1 trigger decision to the front-end electronics, is 3.2\,\textmu s. During this period, the high resolution data is pipelined in readout buffers for further processing. The L1 trigger reduces the event rate to a maximum of 100\,kHz.
 \item \textbf{High-Level trigger (HLT):} Events that are accepted by the L1 trigger stage are transferred to the High-Level trigger for further processing. The HLT is a software system running on several thousand commercial processors. It has access to the full information from all sub-detectors and performs an event reconstruction similar to the later event reconstruction performed for recorded data. Thus, it allows a further rate reduction to the final output rate of a few hundred Hz of events that are finally stored for analyses. Since the HLT is software based, it allows to continously adjust the used algorithms in order to adapt to changing conditions during operation.
 \end{description}
 In the two trigger stages, various different conditions can be tested in parallel which define the so-called \textit{trigger paths}. For instance, there exist dedicated trigger paths to select events with single electrons or muons above a certain \pt threshold or paths to collect events with a specific amount of missing transverse energy. All of these individual trigger paths form together the \textit{trigger menu} and are operated with a dedicated rate such that the total manageable output rate of a few hundred Hz is not exceeded. Typically, the instantaneous luminosity changes gradually during operation which can result in changing output rates for individual trigger paths. In order to not exceed the allowed total trigger rate, the number of recorded events per trigger path can be adjusted accordingly by requiring that only each $n^\mathrm{th}$ triggered event is kept. The respective value of $n$ is denoted \textit{prescale factor}. 
@@ -197,10 +198,10 @@ In the two trigger stages, various different conditions can be tested in paralle
   \begin{tabular}{c}
     \includegraphics[width=0.65\textwidth]{figures/int_lumi_cumulative_pp_2.pdf}
   \end{tabular}
-  \caption{Cumulative integrated luminosity versus day delivered to CMS during stable beams for pp collisions. Different data-taking periods are indicated as follows: green for 2010, red for 2011 and blue for 2012~\cite{bib:lhc:lumi12}.}
+  \caption{Cumulative integrated luminosity versus day delivered to CMS during stable beams for \pp collisions. Different data-taking periods are indicated as follows: 2010 (green), 2011 (red) and 2012 (blue)~\cite{bib:lhc:lumi12}.}
   \label{fig:lhc_data}
 \end{figure}
-The first operation of the LHC took place in September 2008. After a major cooling incident only a few days later requiring a longer technical stop, beams were circulated again in November 2009. The first collisions at a center of mass energy of 7\tev finally happened end of March 2010. 
+The first operation of the LHC took place in September 2008. After a major cooling incident only a few days later requiring a longer technical stop, beams were circulated again in November 2009. The first collisions at a centre-of-mass energy of 7\tev finally happened end of March 2010. 
 In the following running period in 2010, data corresponding to an integrated luminosity of 44.2\pbinv were delivered to the experiments with a maximum peak instantaneous luminosity of $2.05 \times 10^{32} \cm^{-2} \second^{-1}$. These data allowed studies of the detector performance and made first searches for new physics possible. The next data taking period performed during 2011 at the same centre-of-mass energy even delivered a total amount of 6.1\fbinv \pp collision data reaching a peak instantaneous luminosity of $3.5 \times 10^{33} \cm^{-2} \second^{-1}$. Following another technical shutdown during winter, the centre-of-mass energy was finally increased to 8\tev for the running period during 2012 and the peak luminosity reached values of up to $7.7 \times 10^{33} \cm^{-2} \second^{-1}$, which is already almost design conditions. In total, 23.3\fbinv of integrated luminosity \pp collisions were produced by the LHC operating at stable beam conditions. The evolution of the integrated luminosity versus days is illustrated in Fig.~\ref{fig:lhc_data} for data-taking periods in 2010, 2011 and 2012. Typically, these periods are referred to as \textit{LHC Run I}. During most of the operation in 2012, the LHC was circulating 1380 bunches per beam with a spacing of 50\,ns. The average bunch intensity, \ie the number of protons per bunch, was varying from $1.6$ to $1.7 \times 10^{11}$ exceeding even the design value~\cite{bib:lhc:lumi12, Lamont:2013cma}. 
 \begin{figure}[!t]
   \centering
@@ -210,7 +211,7 @@ In the following running period in 2010, data corresponding to an integrated lum
   \caption{Mean number of interactions per bunch crossing in \pp collisions at a centre-of-mass energy of $\sqrt{s} = 8$\tev~\cite{bib:lhc:lumi12}.}
   \label{fig:lhc_pileup}
 \end{figure}
-In general, such conditions result in multiple interactions per bunch crossing known as \textit{pileup} (PU). Typically, two sources of pileup are distinguished: \textit{in-time} pileup (IT PU) and \textit{out-of-time} pileup (OOT PU). While IT PU is caused by additional \pp collisions occuring within the same bunch-crossing as the primary hard collision and leads to additional tracks in the tracking system and energy deposits in the calorimeters, OOT PU arises from \pp collisions in previous and following bunch crossings and contributes further energy deposits in the calorimeters to the hard interaction due to the finite signal decay time in the calorimeters. An overview of the pileup profile in collision data taken in 2012 is given in Fig.~\ref{fig:lhc_pileup}. Here, the mean number of interactions per bunch crossing is illustrated with the mean of this distribution located at 21. Dedicated techniques in order to mitigate effects from pileup have been developed of which some are discussed in Chap.~\ref{chap:Objects}.
+In general, such conditions result in multiple interactions per bunch crossing known as \textit{pileup} (PU). Typically, two sources of pileup are distinguished: \textit{in-time} pileup (IT PU) and \textit{out-of-time} pileup (OOT PU). While IT PU is caused by additional \pp collisions occuring within the same bunch-crossing as the primary hard collision and leads to additional tracks in the tracking system and energy deposits in the calorimeters, OOT PU arises from \pp collisions in previous and following bunch crossings and contributes further energy deposits in the calorimeters to the hard interaction due to the finite signal decay time in the calorimeters. An overview of the pileup profile in collision data taken in 2012 is given in Fig.~\ref{fig:lhc_pileup}. Here, the mean number of interactions per bunch crossing is illustrated with the mean of this distribution located at 21. Dedicated techniques in order to mitigate effects from pileup are employed in the CMS experiment. Some of these are discussed in Chap.~\ref{chap:Objects}.
 
 
 
