--- a/RA2.tex
+++ b/RA2.tex
@@ -71,7 +71,7 @@ Furthermore, SUSY signal samples are obtained from simulation. They are generate
 \bottomrule
 \end{tabular}}
 \end{table}  
-The data have been collected by triggering on \HT, the scalar sum of the jet transverse momenta, and \met, the missing transverse energy. An overview of the considered runs and the integrated luminosity is shown together with the respective HLT trigger paths in Tab.~\ref{tab:RA2_trigger}. \HT and \met are calculated from particle-flow objects at trigger level with nominal thresholds of 350\gev and 100\gev, respectively. Jets considered in this calculation are reconstructed with the anti-$k_T$ algorithm and distance parameter $R = 0.5$. The labelling \textit{PFNoPU} indicates that, for that particular runs, also charged-hadron subtraction was applied to jets at trigger level. \\
+The data have been collected by triggering on \HT, the scalar sum of the jet transverse momenta, and \met, the missing transverse energy. An overview of the considered runs and the integrated luminosity is shown together with the respective HLT trigger paths in Tab.~\ref{tab:RA2_trigger}. \HT and \met are calculated from Particle-Flow objects at trigger level with nominal thresholds of 350\gev and 100\gev, respectively. Jets considered in this calculation are reconstructed with the anti-$k_T$ algorithm and distance parameter $R = 0.5$. The labelling \textit{PFNoPU} indicates that, for that particular runs, also charged-hadron subtraction was applied to jets at trigger level. \\
 In order to determine the offline values for \HT and \MHT (calculated according to the definition following in Sec.~\ref{subsec:RA2_baseline}) for which the triggers reach the plateau efficiency, the trigger efficiencies are measured with respect to a single electron trigger (HLT\_Ele27\_WP80), \ie it is tested how many events that are triggered by the reference electron trigger also pass the trigger under study. In principle, an independent trigger is desirable in order to get an unbiased estimate of the trigger efficiency. However, due to the PF-algorithm all subdetectors are used simultaneously to reconstruct the particles in an event. Hence, no independent trigger paths providing enough statistical precision are available. Consequently, only the reach and position of a plateau efficiency for a certain trigger path can be determined. \\
 The determination of the relative trigger plateau efficiency is performed for different jet multiplicity intervals ($3 \leq \NJets \leq 5$, $6 \leq \NJets \leq 7$ and \NJets~$ \ge 8$). The obtained trigger turn-on curves for the two different HLT paths are shown as a function of \HT and \MHT, as used in the analysis, for jet multiplicity $3 \leq \NJets \leq 5$ in Fig.~\ref{fig:trig_eff_3njets5}. The respective turn-on curves for jet multiplicities $6 \leq$ \NJets $\leq 7$ and \NJets~$ \ge 8$ are shown in App.~\ref{fig:trig_eff_6njets7} and App.~\ref{fig:trig_eff_njets8}. For both trigger paths, the efficiency plateau is reached around values of \HT$ = 500$\gev and \MHT$ = 200$\gev. \\
 The integrated trigger efficiencies for these particular values in different jet multiplicity intervals are summarized with statistical uncertainties in Tab.~\ref{tab:trig_eff}. In general, they are close to 100\% with small uncertainties below 1\%. However, for the highest jet multiplicity selection of \NJets~$ \ge 8$ only few events where selected such that statistical uncertainties are few 10\% large. Though, no hints for a systematic inefficiency have been observed and the signal triggers are considered as fully efficient with an uncertainty of $2\%$ for values of \HT$ > 500$\gev and \MHT$ > 200$\gev independent of the jet multiplicity. 
@@ -115,7 +115,7 @@ The analysis presented in this chapter relies on a precise measurement of the mo
 
 \subsection{Baseline Selection}
 \label{subsec:RA2_baseline}
-The physics objects used in the analysis are reconstructed with the PF algorithm. Jets are clustered from the particle-flow objects with the anti-$k_\mathrm{T}$ algorithm using $R = 0.5$. Furthermore, they are calibrated, as discussed in Sec.~\ref{subsec:jets_calib}, including residual correction factors for data. \\
+The physics objects used in the analysis are reconstructed with the PF algorithm. Jets are clustered from the Particle-Flow objects with the anti-$k_\mathrm{T}$ algorithm using $R = 0.5$. Furthermore, they are calibrated, as discussed in Sec.~\ref{subsec:jets_calib}, including residual correction factors for data. \\
 The following \textit{baseline selection} criteria are used to define the event sample used for the analysis. This selection defines a validation region and provides a basis for tighter criteria.
 \begin{itemize}
  \item{The number of jets (\NJets) is required to be $\ge 3$. \NJets is defined as the number of jets with $\pt > 50$\gev and $|\eta| < 2.5$. This requirement is imposed in order to select multijet events.}
@@ -305,7 +305,7 @@ In order to do this, the prediction of the QCD background is performed in two su
 
  \subsubsection*{Response Templates}
 \label{subsubsec:qcd_response}
-As indicated above, the R+S method relies on a precise parametrization of the jet response to both perform the rebalancing and the jet smearing. The MC-truth response is derived for simulated QCD multijet events, including the full detector simulation, in intervals of $\pt^\mathrm{gen}$ and $|\eta^\mathrm{gen}|$ as summarized in Tab.~\ref{tab:RPlusS_binning}. Reconstructed jets at detector-level are particle-flow jets clustered with the anti-$k_\mathrm{T}$ algorithm using a distance parameter of $R = 0.5$ including charged-hadron subtraction. These jets are calibrated according to the description in Sec.~\ref{subsec:jets_calib}. Furthermore, the pileup scenario of the simulated sample is reweighted to match the one observed in data, as explained in Sec.~\ref{subsec:jer_sel_cuts}. Although a fine $\pt^\mathrm{gen}$ and $|\eta^\mathrm{gen}|$ binning is chosen, the response is averaged over a certain part of the $\pt^\mathrm{gen}$ spectrum in each interval. Thus, the response distribution tends to overestimate the width of the resolution for high-\pt jets while it behaves oppositely for low-\pt jets. \\
+As indicated above, the R+S method relies on a precise parametrization of the jet response to both perform the rebalancing and the jet smearing. The MC-truth response is derived for simulated QCD multijet events, including the full detector simulation, in intervals of $\pt^\mathrm{gen}$ and $|\eta^\mathrm{gen}|$ as summarized in Tab.~\ref{tab:RPlusS_binning}. Reconstructed jets at detector-level are Particle-Flow jets clustered with the anti-$k_\mathrm{T}$ algorithm using a distance parameter of $R = 0.5$ including charged-hadron subtraction. These jets are calibrated according to the description in Sec.~\ref{subsec:jets_calib}. Furthermore, the pileup scenario of the simulated sample is reweighted to match the one observed in data, as explained in Sec.~\ref{subsec:jer_sel_cuts}. Although a fine $\pt^\mathrm{gen}$ and $|\eta^\mathrm{gen}|$ binning is chosen, the response is averaged over a certain part of the $\pt^\mathrm{gen}$ spectrum in each interval. Thus, the response distribution tends to overestimate the width of the resolution for high-\pt jets while it behaves oppositely for low-\pt jets. \\
 The truth jet response is derived by performing an unambigous one-to-one matching of reconstructed jet $i$ to generated jet $i$ using a distance criterion of $\Delta R < 0.1$. In order to avoid tails from splitting and merging effects of the jet reconstruction, any further reconstructed or generated jet $j \ne i$ around a matched jet pair is vetoed in a cone of size $R < 0.7$ by requiring
 \begin{equation}
  \pt^{\rm{GenJet}_j} / \pt^{\rm{GenJet}_i} < 0.05
@@ -355,7 +355,7 @@ with $dy^i = y_{\mathrm{true}}^i - y_{\mathrm{measured}}^i$ and covariance matri
 \begin{equation}
 \frac{\sigma_\mathrm{MC}(\pt)}{\pt} = \sqrt{\mathrm{sgn}(N) \cdot \left(\frac{N}{\pt}\right)^2 + S^2 \cdot \pt^{m-1} + C^2} \; ,
 \end{equation} 
-with free parameters $N, S, C$ and $m$. This function is a modified version of Eq.~\ref{eq:NSC} introduced in Chap.~\ref{chap:Resolution} for the characterization of the resolution. It is adjusted here to better describe the resolution of particle-flow jets. The term $\mathrm{sgn}(N)$ considers the improved momentum resolution at low \pt due to the employed tracking information. Since also at medium \pt the tracking information still compensates for non-linearities of the calorimeters, the parameter $m$ is introduced. The fitted functions are illustrated in Fig.~\ref{fig:qcd_rs_truth_res} as red curve and used as input for the kinematic fit. The whole set of truth resolution histograms displayed with the fitted resolution functions for all $|\eta^\mathrm{gen}|$ intervals used as input for the kinematic fit are illustrated in Fig.~\ref{app:fig:qcd_rs_truth_res} and Fig.~\ref{app:fig:qcd_rs_truth_res2} in the appendix. 
+with free parameters $N, S, C$ and $m$. This function is a modified version of Eq.~\ref{eq:NSC} introduced in Chap.~\ref{chap:Resolution} for the characterization of the resolution. It is adjusted here to better describe the resolution of Particle-Flow jets. The term $\mathrm{sgn}(N)$ considers the improved momentum resolution at low \pt due to the employed tracking information. Since also at medium \pt the tracking information still compensates for non-linearities of the calorimeters, the parameter $m$ is introduced. The fitted functions are illustrated in Fig.~\ref{fig:qcd_rs_truth_res} as red curve and used as input for the kinematic fit. The whole set of truth resolution histograms displayed with the fitted resolution functions for all $|\eta^\mathrm{gen}|$ intervals used as input for the kinematic fit are illustrated in Fig.~\ref{app:fig:qcd_rs_truth_res} and Fig.~\ref{app:fig:qcd_rs_truth_res2} in the appendix. 
 \begin{figure}[!t]
   \centering
   \begin{tabular}{cc}
